# SCPBR

./: AUTHORS  CITATION.cff  ChangeLog.md  Makefile.am  README.md  configure.ac
.github/scripts/: scpbr-build.sh  scpbr-test-standalone.sh  scpbr-test-ucvm.sh  sjfz-build.sh  sjfz-test-standalone.sh  sjfz-test-ucvm.sh
.github/workflows/: scpbr-ci.yml  scpbr-ucvm-ci.yml  sjfz-ci.yml  sjfz-ucvm-ci.yml  test-ci.yml
data/: .config.swp  Makefile.am  NOTE  calc_surf_shift.py  config  create_data_file.py  create_data_inp_file.py  make_data_files.py  r.py  remove_fake_data.py  rework_fang_data.py  scpbr.dat.txt  shift.py  test_data_file.py  todo  tt.py
data/Fang2016Model/: depth
data/FangModel/: ETOPO1.surfs  SJFZ_Fangetal2016_VpandVs.csv  lats  lons  o_depth  plotFangModel.py  surfs
data/fang_inp/: coords.txt
data/scripts/: calc_surf_shift.py  create_data_file.py  remove_fake_data.py  rework_fang_data.py  test_surf.py
data_simple/: config  create_data_file.py  create_data_inp_file.py  test_data_file.py
data_simple/fang_inp/: depth  lats  lons
src/: Makefile.am  scpbr.c  scpbr.h  sjfz.c  sjfz.h  ucvm_model_dtypes.h
test/: Makefile  Makefile.am  Makefile.in  accepttest.c  run_accept  run_unit  test.c  test_grid_exec.c  test_grid_exec.h  test_helper.c  test_helper.h  test_scpbr_exec.c  test_scpbr_exec.h  test_sjfz_exec.c  test_sjfz_exec.h  unittest.c  unittest_defs.c  unittest_defs.h
test/inputs/: scpbr_ETOPO1.surfs  sjfz_ucvm.surfs  test-depth-cvmhvbn.in  test-depth-ucvm.in  test-depth.in  test-elev-cvmhvbn.in  test-elev.in  test-grid.in  test_latlons_cvmh_ge.txt  test_latlons_gd.txt  test_latlons_ucvm_ge.txt
test/ref/: test-depth-cvmhvbn.ref  test-depth-ucvm.ref  test-depth.ref  test-elev-cvmhvbn.ref  test-grid-cvmhvbn-depth.ref  test-grid-cvmhvbn-elev.ref  test_latlons_cvmh_ge.ref  test_latlons_ucvm_ge.ref
tests/: Makefile.am  run_test_scpbr.sh  test.c
